--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "lint:fix": "pnpm lint --fix",
     "coverage": "jest --coverage",
     "test": "tsc --noEmit -p test && jest",
-    "test-ct": "playwright test -c playwright-ct.config.ts"
+    "test-ct": "rimraf playwright/.cache && playwright test -c playwright-ct.config.ts"
   },
   "husky": {
     "hooks": {
